--- a/client/src/components/Reviews/ReviewItem/ReviewItem.module.scss
+++ b/client/src/components/Reviews/ReviewItem/ReviewItem.module.scss
@@ -11,7 +11,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 .star {
@@ -39,7 +39,7 @@
   font-size: 13px;
   text-align: left;
   letter-spacing: 0.65px;
-  margin-bottom: 5px;
+  margin-bottom: 12px;
 }
 
 .review__data {
