--- a/client/src/components/UI/Rating/Rating.module.scss
+++ b/client/src/components/UI/Rating/Rating.module.scss
@@ -19,4 +19,10 @@
     width: 9px;
     height: 8px;
   }
+
+  @media (max-width: 575.98px) {
+    margin-left: 2.25px;
+    width: 9px;
+    height: 8px;
+  }
 }
